[gd_scene load_steps=2 format=3 uid="uid://cd131l7nk1vbt"]

[ext_resource type="Script" uid="uid://cof8wl2tte6m5" path="res://scenes/main_menu/join_menu.gd" id="1_join"]

[node name="JoinMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_join")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"
horizontal_alignment = 1

[node name="IPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Host IP Address:"

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "192.168.1.xxx"

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Your Name:"

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "Client Player"
placeholder_text = "Player Name"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
